trunk/Archive2/7e/3fda3ded4a4091/output
main.cpp:5:8: error: expected expression
    x := y;
       ^
1 error generated.
